# codesight

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: App.tsx  api.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  db.rs  error.rs  lib.rs  main.rs  repo.rs
src-tauri/src/analysis/: activity.rs  contributor.rs  global.rs  graph.rs  imports.rs  insights.rs  mod.rs  quality.rs
src/components/: AppShell.tsx  AppTopBar.tsx  ChartTooltip.tsx  CommandPalette.tsx  CommitMessageStatsCard.tsx  DateRangeBadge.tsx  DiffView.tsx  ExportMarkdownButton.tsx  ExportPngButton.tsx  FileHotspotsCard.tsx  Heatmap.tsx  OpenInIdeButton.tsx  PageHeader.tsx  SectionShell.tsx  Sidebar.tsx  Sparkline.tsx  StatusBar.tsx  TagManager.tsx
src/i18n/: index.ts
src/lib/: exportMarkdown.ts  exportPng.ts  format.ts  graphLayout.ts  highlight.ts  highlightMatch.tsx  openInGitClient.ts  openInIde.ts  openInTerminal.ts  qualityScore.ts  tagColors.ts  useChartTooltip.ts
src/pages/: ActivityPage.tsx  BranchesPage.tsx  CollaboratorsPage.tsx  CommitDetailPage.tsx  ComparisonPage.tsx  ContributorDetailPage.tsx  ContributorsPage.tsx  CouplingsGraphPage.tsx  GraphPage.tsx  HealthPage.tsx  HeatmapPage.tsx  HomePage.tsx  HotspotsPage.tsx  ImportGraphPage.tsx  MessagesPage.tsx  (+11 more)
(+14 files in other folders)
